--- a/links.html
+++ b/links.html
@@ -340,7 +340,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id7">cloudflare</a>
+                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id6">cloudflare</a>
             </td>
         </tr>
         <tr>
@@ -535,25 +535,6 @@ Links    </title>
         </tr>
         <tr>
             <td>
-                docs
-            </td>
-            <td>
-                gitlab.com
-            </td>
-            <td>
-                <a href="https://docs.gitlab.com/ee/user/project/pages/">ee/user/project/pages</a>
-            </td>
-            <td>
-                <a href="about.html">
-                    About
-                </a>
-            </td>
-            <td>
-                I’m using pelican to render this site from markdown, and hosting the result via <a href="about.html#generated-link-id5">gitlab pages</a>
-            </td>
-        </tr>
-        <tr>
-            <td>
                 -
             </td>
             <td>
@@ -568,7 +549,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                The relevant <a href="about.html#generated-link-id8">code</a>
+                The relevant <a href="about.html#generated-link-id7">code</a>
             </td>
         </tr>
         <tr>
@@ -891,7 +872,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with <a href="about.html#generated-link-id6">Namecheap</a>
+                My domain is registered with <a href="about.html#generated-link-id5">Namecheap</a>
             </td>
         </tr>
         <tr>
@@ -1537,7 +1518,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                ) at <a href="about.html#generated-link-id1">UC Santa Barbara’s College of Creative Studies</a>
+                I’m originally from the foothills of northern California, and I studied physics (BSc) at <a href="about.html#generated-link-id1">UC Santa Barbara’s College of Creative Studies</a>
             </td>
         </tr>
         <tr>
@@ -1556,7 +1537,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                my undergraduate <a href="about.html#generated-link-id2">thesis</a>
+                « <a href="about.html#generated-link-id9">web.physics.ucsb.edu</a>
             </td>
         </tr>
         <tr>
@@ -2297,7 +2278,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                Please, use and <a href="about.html#generated-link-id9">hack</a>
+                Please, use and <a href="about.html#generated-link-id8">hack</a>
             </td>
         </tr>
         <tr>
