--- a/links.html
+++ b/links.html
@@ -340,7 +340,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id7">cloudflare</a>
+                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id10">cloudflare</a>
             </td>
         </tr>
         <tr>
@@ -516,6 +516,25 @@ Links    </title>
         </tr>
         <tr>
             <td>
+                blog
+            </td>
+            <td>
+                getpelican.com
+            </td>
+            <td>
+                <a href="https://blog.getpelican.com">None</a>
+            </td>
+            <td>
+                <a href="about.html">
+                    About
+                </a>
+            </td>
+            <td>
+                I’m using <a href="about.html#generated-link-id6">pelican</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 -
             </td>
             <td>
@@ -535,13 +554,13 @@ Links    </title>
         </tr>
         <tr>
             <td>
-                -
+                pages
             </td>
             <td>
-                gitlab.com
+                github.com
             </td>
             <td>
-                <a href="https://gitlab.com/raabrp/static-website">raabrp/static-website</a>
+                <a href="https://pages.github.com/">None</a>
             </td>
             <td>
                 <a href="about.html">
@@ -549,7 +568,26 @@ Links    </title>
                 </a>
             </td>
             <td>
-                The relevant <a href="about.html#generated-link-id8">code</a>
+                I’m using pelican to render this site from markdown and hosting the result via <a href="about.html#generated-link-id8">github pages</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
+                github.com
+            </td>
+            <td>
+                <a href="https://github.com/raabrp/rraabblog">raabrp/rraabblog</a>
+            </td>
+            <td>
+                <a href="about.html">
+                    About
+                </a>
+            </td>
+            <td>
+                The relevant <a href="about.html#generated-link-id11">code</a>
             </td>
         </tr>
         <tr>
@@ -872,7 +910,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with <a href="about.html#generated-link-id6">Namecheap</a>
+                My domain is registered with <a href="about.html#generated-link-id9">Namecheap</a>
             </td>
         </tr>
         <tr>
@@ -1537,7 +1575,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                « <a href="about.html#generated-link-id10">web.physics.ucsb.edu</a>
+                « <a href="about.html#generated-link-id13">web.physics.ucsb.edu</a>
             </td>
         </tr>
         <tr>
@@ -2270,6 +2308,25 @@ Links    </title>
                 wikipedia.org
             </td>
             <td>
+                <a href="https://en.wikipedia.org/wiki/Markdown">wiki/Markdown</a>
+            </td>
+            <td>
+                <a href="about.html">
+                    About
+                </a>
+            </td>
+            <td>
+                I’m using pelican to render this site from <a href="about.html#generated-link-id7">markdown</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                en
+            </td>
+            <td>
+                wikipedia.org
+            </td>
+            <td>
                 <a href="https://en.wikipedia.org/wiki/Hacker_culture">wiki/Hacker_culture</a>
             </td>
             <td>
@@ -2278,7 +2335,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                Please, use and <a href="about.html#generated-link-id9">hack</a>
+                Please, use and <a href="about.html#generated-link-id12">hack</a>
             </td>
         </tr>
         <tr>
