--- a/links.html
+++ b/links.html
@@ -340,7 +340,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id10">cloudflare</a>
+                My domain is registered with Namecheap, which points to <a href="about.html#generated-link-id12">cloudflare</a>
             </td>
         </tr>
         <tr>
@@ -530,7 +530,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                I’m using <a href="about.html#generated-link-id6">pelican</a>
+                I’m using <a href="about.html#generated-link-id8">pelican</a>
             </td>
         </tr>
         <tr>
@@ -554,6 +554,25 @@ Links    </title>
         </tr>
         <tr>
             <td>
+                -
+            </td>
+            <td>
+                github.com
+            </td>
+            <td>
+                <a href="https://github.com/raabrp">raabrp</a>
+            </td>
+            <td>
+                <a href="about.html">
+                    About
+                </a>
+            </td>
+            <td>
+                I have a <a href="about.html#generated-link-id4">github</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 pages
             </td>
             <td>
@@ -568,7 +587,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                I’m using pelican to render this site from markdown and hosting the result via <a href="about.html#generated-link-id8">github pages</a>
+                I’m using pelican to render this site from markdown and hosting the result via <a href="about.html#generated-link-id10">github pages</a>
             </td>
         </tr>
         <tr>
@@ -587,7 +606,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                The relevant <a href="about.html#generated-link-id11">code</a>
+                The relevant <a href="about.html#generated-link-id13">code</a>
             </td>
         </tr>
         <tr>
@@ -910,7 +929,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                My domain is registered with <a href="about.html#generated-link-id9">Namecheap</a>
+                My domain is registered with <a href="about.html#generated-link-id11">Namecheap</a>
             </td>
         </tr>
         <tr>
@@ -1575,7 +1594,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                « <a href="about.html#generated-link-id13">web.physics.ucsb.edu</a>
+                « <a href="about.html#generated-link-id15">web.physics.ucsb.edu</a>
             </td>
         </tr>
         <tr>
@@ -2316,7 +2335,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                I’m using pelican to render this site from <a href="about.html#generated-link-id7">markdown</a>
+                I’m using pelican to render this site from <a href="about.html#generated-link-id9">markdown</a>
             </td>
         </tr>
         <tr>
@@ -2335,7 +2354,7 @@ Links    </title>
                 </a>
             </td>
             <td>
-                Please, use and <a href="about.html#generated-link-id12">hack</a>
+                Please, use and <a href="about.html#generated-link-id14">hack</a>
             </td>
         </tr>
         <tr>
