in-browser chess project

--- a/index.html
+++ b/index.html
@@ -191,6 +191,25 @@ Reilly Raab    </title>
             </p>
         </li>
     </ul>
+    <h2>
+        Projects
+    </h2>
+    <ul>
+        <li>
+            <p>
+                <a href="chess.html">
+                 Chess
+                </a>
+            </p>
+        </li>
+        <li>
+            <p>
+                <a href="dark-chess.html">
+                 Dark-Chess
+                </a>
+            </p>
+        </li>
+    </ul>
 </article>
     </main>
 
