--- a/links.html
+++ b/links.html
@@ -193,6 +193,25 @@ Links    </title>
         </tr>
         <tr>
             <td>
+                www
+            </td>
+            <td>
+                apronus.com
+            </td>
+            <td>
+                <a href="https://www.apronus.com/chess/pgnviewer/">chess/pgnviewer</a>
+            </td>
+            <td>
+                <a href="chess.html">
+                    Chess
+                </a>
+            </td>
+            <td>
+                Dark-Chess Variant <a href="chess.html#generated-link-id1">Apronus chess viewer</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
                 -
             </td>
             <td>
@@ -322,6 +341,44 @@ Links    </title>
             </td>
             <td>
                 Zuckerberg’s “Dumb fucks” comment « <a href="facebook.html#generated-link-id162">buisnessinsider.com</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
+                chessboardjs.com
+            </td>
+            <td>
+                <a href="http://chessboardjs.com/">None</a>
+            </td>
+            <td>
+                <a href="chess.html">
+                    Chess
+                </a>
+            </td>
+            <td>
+                Apronus chess viewer <a href="chess.html#generated-link-id2">chessboard.js</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
+                chessboardjs.com
+            </td>
+            <td>
+                <a href="http://chessboardjs.com/">None</a>
+            </td>
+            <td>
+                <a href="dark-chess.html">
+                    Dark-Chess
+                </a>
+            </td>
+            <td>
+                Dark Chess (Wikipedia) <a href="dark-chess.html#generated-link-id1">chessboard.js</a>
             </td>
         </tr>
         <tr>
@@ -607,6 +664,44 @@ Links    </title>
             </td>
             <td>
                 The relevant <a href="about.html#generated-link-id13">code</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
+                github.com
+            </td>
+            <td>
+                <a href="https://github.com/jhlywa/chess.js">jhlywa/chess.js</a>
+            </td>
+            <td>
+                <a href="chess.html">
+                    Chess
+                </a>
+            </td>
+            <td>
+                js <a href="chess.html#generated-link-id3">chess.js</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                -
+            </td>
+            <td>
+                github.com
+            </td>
+            <td>
+                <a href="https://github.com/jhlywa/chess.js">jhlywa/chess.js</a>
+            </td>
+            <td>
+                <a href="dark-chess.html">
+                    Dark-Chess
+                </a>
+            </td>
+            <td>
+                js <a href="dark-chess.html#generated-link-id2">chess.js</a>
             </td>
         </tr>
         <tr>
@@ -2355,6 +2450,25 @@ Links    </title>
             </td>
             <td>
                 Please, use and <a href="about.html#generated-link-id14">hack</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                en
+            </td>
+            <td>
+                wikipedia.org
+            </td>
+            <td>
+                <a href="https://en.wikipedia.org/wiki/Dark_chess">wiki/Dark_chess</a>
+            </td>
+            <td>
+                <a href="dark-chess.html">
+                    Dark-Chess
+                </a>
+            </td>
+            <td>
+                 <a href="dark-chess.html#generated-link-id0">Dark Chess (Wikipedia)</a>
             </td>
         </tr>
         <tr>
