broken link fix

--- a/chess.html
+++ b/chess.html
@@ -178,7 +178,7 @@ Chess    </title>
 <textarea id="field" style="width: 100%; height: 400px;"></textarea>
 <hr/>
         See also:<br/>
-<a href="/chess.html?dark" id="generated-link-id0">Dark-Chess Variant</a><br/>
+<a href="/dark-chess.html" id="generated-link-id0">Dark-Chess Variant</a><br/>
 <a href="https://www.apronus.com/chess/pgnviewer/" id="generated-link-id1">Apronus chess viewer</a><br/>
 <a href="http://chessboardjs.com/" id="generated-link-id2">chessboard.js</a><br/>
 <a href="https://github.com/jhlywa/chess.js" id="generated-link-id3">chess.js</a><br/>
