--- a/dark-chess.html
+++ b/dark-chess.html
@@ -185,7 +185,7 @@ Dark-Chess    </title>
 <script type="text/javascript">
 
  // anonymous function to disallow trivial console inspection
- /* (function() { */
+ (function() {
 
 
  // given row and column numbers (starting at 0), convert to
@@ -643,7 +643,7 @@ Dark-Chess    </title>
 
  update();
 
-     /* })(); */
+ })();
 </script>
 
 </article>
